Bug 1592747 - Null check mChannel in WaitForBgParent so that we don't crash release builds. r=mayhemer

Differential Revision: https://phabricator.services.mozilla.com/D57046

--HG--
extra : moz-landing-system : lando